2007-12-29  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: New. Rule that use MoMA definition
	files to report possible incompatibilities with Mono (Andreas Noever)
	* MoMAWebService.cs: New. Wrapper for MoMA web service.
	* Gendarme.Rules.Portability.xml.in: Add new rule definition.
	* Gendarme.Rules.Portability.mdp: Add new rule to the MonoDevelop 
	project file.
	* Makefile.am: Add new rule/tests to the build.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* FeatureRequiresRootPrivilegeOnUnixRule.cs: New. Rule that check
	for the use of features that requires to be root under Linux.
	* NewLineLiteralRule.cs: Update to use latest best-practice since
	it's a likely starting point for new rules.
	* Gendarme.Rules.Portability.xml.in: Add new rule definition.
	* Gendarme.Rules.Portability.mdp: Add new rule to the MonoDevelop 
	project file.
	* Makefile.am: Add new rule/tests to the build.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Portability.mdp: Update project file.

2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Portability.xml.in: Update Uri for rules (to generate
	more useful reports).	

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-28  Christian Birkl  <christian.birkl@gmail.com>

	* Gendarme.Rules.Portability.csproj: Included ChangeLog
	* NewLineLiteralRule.cs: Migrated untyped IList messages collection
	to typed MessageCollection class.
	
2006-09-18  Sebastien Pouliot  <sebastien@ximian.com>

	* NewLineLiteralRule.cs: Update rule to provide location (which 
	results in better reports).

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Portability.mdp: New. Project file for MonoDevelop.

2006-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Use -pkg:mono-nunit to reference nunit assemblies.