@@ -1,4 +1,10 @@
 <rules>
+	<rule	Name="ExitCodeIsLimitedOnUnixRule" 
+		Type="Gendarme.Rules.Portability.ExitCodeIsLimitedOnUnixRule, Gendarme.Rules.Portability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
+		Uri="http://www.mono-project.com/Gendarme#ExitCodeIsLimitedOnUnixRule" >
+		<problem>The rule detected a value outside the 0-255 range or couldn't be sure of the returned value.</problem>
+		<solution>Review that your return values are all between 0 and 255, this will ensure them to works under both Unix and Windows OS.</solution>
+	</rule>
 	<rule	Name="FeatureRequiresRootPrivilegeOnUnixRule" 
 		Type="Gendarme.Rules.Portability.FeatureRequiresRootPrivilegeOnUnixRule, Gendarme.Rules.Portability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
 		Uri="http://www.mono-project.com/Gendarme#FeatureRequiresRootPrivilegeOnUnixRule" >
